[gd_scene load_steps=27 format=2]

[ext_resource path="res://Enemies/Sprites/Slime/big_slime.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Slime/Slime.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Sprites/Slime/big_slime_pop_16.png" type="Texture" id=3]
[ext_resource path="res://Misc/Health_Bar.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 440, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 520, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "pop",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 16.0

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 6 )

[node name="SlimeSpawnLeft" type="Position2D" parent="."]
position = Vector2( -10, 0 )

[node name="SlimeSpawnRight" type="Position2D" parent="."]
position = Vector2( 10, 0 )

[node name="Health_Bar" parent="." instance=ExtResource( 4 )]
margin_left = -25.0
margin_top = -22.0
margin_right = 75.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.4 )

[node name="knockback" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="knockback" to="." method="_on_knockback_timeout"]
